--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
   :root {
     --background: 241 53% 20%;
     --foreground: 0 0% 100%;
